---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, backup, restore, bluexp, bluexp backup and recovery, protection' 
summary: Descubre las novedades del backup y recuperación de BlueXP. 
---
= Novedades de backup y recuperación de datos de BlueXP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Descubre las novedades del backup y recuperación de BlueXP.



== 9 de junio de 2025

Esta versión de copia de seguridad y recuperación de BlueXP  incluye las siguientes actualizaciones.



=== Actualizaciones de soporte del catálogo indexado

En febrero de 2025, presentamos la función de indexación actualizada (Catálogo Indexado v2) que se utiliza durante el método de búsqueda y restauración de datos. La versión anterior mejoró significativamente el rendimiento de la indexación de datos en entornos locales. Con esta versión, el catálogo de indexación ya está disponible en entornos de Amazon Web Services, Microsoft Azure y Google Cloud Platform (GCP).

Si es un cliente nuevo, el Catálogo Indexado v2 está habilitado de forma predeterminada para todos los entornos nuevos. Si ya es cliente, puede reindexar su entorno para aprovechar el Catálogo Indexado v2.

.¿Cómo se habilita la indexación?
Para poder utilizar el método de búsqueda y restauración de datos, debe activar la indexación en cada entorno de trabajo de origen desde el que tiene pensado restaurar volúmenes o archivos. Seleccione la opción *Habilitar indexación* cuando esté realizando una búsqueda y restauración.

El catálogo indexado puede luego rastrear cada volumen y archivo de respaldo, haciendo que sus búsquedas sean rápidas y eficientes.
