@@ -1544,7 +1544,6 @@
   <block id="64964208f145e571ed736f861e9c039d" category="admonition">El backup y la recuperación de BlueXP deben estar activados al menos en un entorno de trabajo y deben existir archivos de copia de seguridad iniciales.</block>
   <block id="5b8dbbc2163786a4aed9331d66f16125" category="list-text">La copia de seguridad y recuperación de BlueXP muestra las carpetas y archivos que existen dentro del archivo de copia de seguridad seleccionado.</block>
   <block id="3909c405c5c3e8aaab7d2079c933cb0f" category="paragraph">Como puedes ver, realmente solo necesitas saber un nombre parcial y las búsquedas de backup y recuperación de BlueXP a través de todos los archivos de copia de seguridad que coincidan con tu búsqueda.</block>
-  <block id="cde27c2ee36cb857ffdbfe24fb0f0fef" category="paragraph">Cuando habilita esta funcionalidad, el backup y recuperación de BlueXP permite utilizar SnapDiff v3 en la SVM para los volúmenes y realiza las siguientes acciones:</block>
   <block id="091c3b75fcc63b578a3277a3c06221b8" category="list-text">Se ha suscrito a<block ref="b82eb11d49725bb5c7ee9cfd96e7991d" category="inline-link-rx"></block>, o usted ha comprado <block ref="a7c7886675f758752089ea0caddfb19c" category="inline-link-macro-rx"></block> Una licencia BYOL de backup y recuperación de BlueXP de NetApp.</block>
   <block id="afa3805a28538274aaae2473f6106629" category="inline-image-macro">Una captura de pantalla que muestra el botón Habilitar copia de seguridad y recuperación de BlueXP, que está disponible después de seleccionar un entorno de trabajo.</block>
   <block id="a2271679a96260c288cd66073902da0e" category="paragraph"><block ref="a2271679a96260c288cd66073902da0e" category="inline-image-macro-rx" type="image"></block></block>
@@ -1569,7 +1568,6 @@
   <block id="0718118055dc2edc791fa29a90a786fe" category="section-title">Clases de almacenamiento de archivado de Google admitidas para backup y recuperación de BlueXP</block>
   <block id="c2e5d30cd0abf0804ca8396b9b1f8c56" category="paragraph">Tenga en cuenta que al configurar el backup y la recuperación de BlueXP con este tipo de regla de ciclo de vida, no debe configurar ninguna regla de ciclo de vida al configurar el bloque en su cuenta de Google.</block>
   <block id="993e951005a20173ae0c8c379739a8f1" category="summary">Descubre las novedades del backup y recuperación de BlueXP.</block>
-  <block id="fd3d1ba9a2328492349b6ebea92fe728" category="doc">Novedades de backup y recuperación de datos de BlueXP</block>
   <block id="ef08fc33d8b9b410529dc05986b2e248" category="paragraph">Las nuevas funcionalidades en las API te permiten realizar un backup de tus snapshots de volúmenes en ONTAP S3 mediante el backup y la recuperación de BlueXP. Esta funcionalidad solo está disponible para sistemas ONTAP en las instalaciones por el momento. Para obtener instrucciones detalladas, consulte el Blog<block ref="8bfab3c14784f20047e4459b814ebfe4" category="inline-link-rx"></block>.</block>
   <block id="bcd4bdef20ff7dec0587f35facdeb7be" category="paragraph">Al crear backups desde sistemas Cloud Volumes ONTAP en el almacenamiento de Azure, el backup y la recuperación de BlueXP aprovisiona de forma predeterminada el Blob Container con redundancia local (LRS) para la optimización de costes. Puede cambiar esta configuración a redundancia de zona (ZRS) si desea que los datos se repliquen entre zonas diferentes. Consulte las instrucciones de Microsoft para<block ref="c549763665cfbb93dbccfdbf667aa0f2" category="inline-link-rx"></block>.</block>
   <block id="4788963de19a5204a352f3308b0395d8" category="inline-link">Revisa todas las alertas que pueden enviar el backup y la recuperación de BlueXP</block>
@@ -3949,4 +3947,8 @@ ifdef::aws[]</block>
   <block id="4d1f1dc63841491797cde0fde7dec31d" category="list-text">Seleccione la ubicación de destino donde desea que se restaure el volumen, la carpeta o los archivos y seleccione *Restaurar*.</block>
   <block id="dc98364e6680ec201dcd1e55df5cf2e1" category="paragraph">Se restauran el volumen, la carpeta o los archivos y se devuelve a la consola de restauración para poder revisar el progreso de la operación de restauración. También puede seleccionar la pestaña *Monitoreo de trabajos* para ver el progreso de la restauración.</block>
   <block id="791d05d0e9072626d0316ef0a7cf21bc" category="section-title">9 de junio de 2025</block>
+  <block id="0a849c115a4741e75692ddd548e07b4d" category="paragraph">Puede habilitar o deshabilitar esta opción al habilitar la protección o iniciar el proceso de restauración.</block>
+  <block id="9bbf67835dcc255a2362d9d5043708ad" category="paragraph">El servicio no proporciona un depósito independiente al usar el Catálogo Indexado v2. En cambio, para las copias de seguridad almacenadas en AWS, Azure, Google Cloud Platform, StorageGRID u ONTAP S3, el servicio proporciona espacio en el Conector o en el entorno del proveedor de nube.</block>
+  <block id="c2da3976b7bba43b7d1d45f7a32a43bd" category="paragraph">Si habilitó el Catálogo indexado antes del lanzamiento de la versión v2, ocurrirá lo siguiente con los entornos de trabajo:</block>
+  <block id="5323d04b0f0228d9a4b7ec5629ddb280" category="doc">Novedades en la copia de seguridad y recuperación de BlueXP</block>
 </blocks>
